--- a/vista/html/carrito.html
+++ b/vista/html/carrito.html
@@ -3,35 +3,56 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Carrito de Compras</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>MiniMarket.com</h1>
-            </div>
-            <div class="col-md-4">
-                <div class="inicioSesion">
-                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-11">
+                <div class="bannerNav">
+                  <h1>MiniMarket.com</h1>
+                  <img src="/vista/imagenes/shopping-cart.png" alt="icono de compra">
                 </div>
+                <div class="inicioSesion">
+                  <img src="/vista/imagenes/account.png" alt="perfil">
+                  <a href="/vista/html/iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+                </div>
+              </div>
             </div>
-        </div>
 
         <!--Barra-->
 
         <div class="row">
             <div class="col-md-12">
-                <div class="barra">
-                        <a href="../../index.html" id="vistas">Inicio</a>
-                        <a href="ropa.html" id="vistas">Ropa</a>
-                        <a href="accesorios.html" id="vistas">Accesorios</a>
-                        <a href="carrito.html" id="vistas">Carrito de Compras</a>
-                </div>
+              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">MiniMarket</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </button>
+    
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../../index.html">Inicio <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="ropa.html">Ropa</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="accesorios.html">Accesorios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="carrito.html">Carrito de compras</a>
+                  </li>
+                </ul>
+              </div>
+              </nav>
             </div>
-        </div>
-
+          </div>
         <!--titulo2-->
             <div class="row">
                 <div class="col-md-12">
