--- a/vista/html/productos.html
+++ b/vista/html/productos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MINIMARKET</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
@@ -20,11 +21,12 @@
         <label for="ropa">ROPA</label>
         <input type="checkbox" name="ropa">
         <label for="">DAMA</label>
-        <input type="text" name="dama">
+        <input type="checkbox" name="dama">
         <label for="">CABALLERO</label>
-        <input type="text" name="caballero">
+        <input type="checkbox" name="caballero">
         <label for="">NIÑOS</label>
-        <input type="text" name="nino">
+        <input type="checkbox" name="nino">
+        <button type="submit">AGREGAR</button>
     </div>
 </body>
 <script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
