--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MiniMarket</title>
   </head>
 
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
-          <h1>MiniMarket.com</h1>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-11">
+          <div class="bannerNav">
+            <h1>MiniMarket.com</h1>
+            <img src="/vista/imagenes/shopping-cart.png" alt="icono de compra">
+          </div>
           <div class="inicioSesion">
+            <img src="/vista/imagenes/account.png" alt="perfil">
             <a href="/vista/html/iniciarSesion.html" id="inicio">Iniciar Sesion</a>
           </div>
         </div>
@@ -20,12 +23,30 @@
 
       <div class="row">
         <div class="col-md-12">
-          <div class="barra">
-            <a href="index.html" id="vistas">Inicio</a>
-            <a href="vista/html/ropa.html" id="vistas">Ropa</a>
-            <a href="/vista/html/accesorios.html" id="vistas">Accesorios</a>
-            <a href="/vista/html/carrito.html" id="vistas">Carrito de Compras</a>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">MiniMarket</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="vista/html/ropa.html">Ropa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/vista/html/accesorios.html">Accesorios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/vista/html/carrito.html">Carrito de compras</a>
+              </li>
+            </ul>
           </div>
+          </nav>
         </div>
       </div>
 
@@ -41,21 +62,21 @@
               <div class="carousel-item active">
                 <img
                   class="d-block w-100"
-                  src="vista/imagenes/bas.jpg"
+                  src="vista/imagenes/portal1.jpg"
                   alt="First slide"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="d-block w-100"
-                  src="vista/imagenes/bas2.jpg"
+                  src="vista/imagenes/portal2.jpg"
                   alt="Second slide"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="d-block w-100"
-                  src="vista/imagenes/bas3.jpg"
+                  src="vista/imagenes/portal3.jpg"
                   alt="Third slide"
                 />
               </div>
@@ -101,7 +122,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/tendenciaI.jpg"
+              src="vista/imagenes/tendeciaI.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -119,7 +140,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/tendenciaII.jpg"
+              src="vista/imagenes/tendeciaII.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -137,7 +158,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="vista/imagenes/tendenciaIII.jpg"
+              src="vista/imagenes/tendeciaIII.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -154,9 +175,9 @@
         <div class="col-md-12">
           <h5>Nuevos deportes</h5>
         </div>
-      </div>
+      </div> 
       <!--targetas-->
-      <div class="row">
+       <div class="row">
         <div class="col-md-4">
           <div class="card">
             <img
@@ -276,19 +297,22 @@
       </div>
 
       <!--banner-->
-      <center>
-        <div id="banner">
+
           <div class="row">
             <div class="col-md-12">
-              <p>Contactos: 3150008935-2334443</p>
-              <p>linea nacional: 01800032323134</p>
-              <p>Quejas y reclamos: minimarket.comercioweb@gmail.com</p>
-              <p>Dererchos de autor Reservados</p>
-              <p>MiniMarket web</p>
+              <div class="footer">
+                <ul>
+                  <li>Contactos: 3150008935-2334443</li>
+                  <li>Quejas y reclamos: minimarket.comercioweb@gmail.com</li>
+                  <li>Dererchos de autor Reservados</li>
+                  <li>linea nacional: 01800032323134</li>
+                  <li>MiniMarket web</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </center>
+        
+
     </div>
   </body>
   <script type="text/javascript" src="includes/jquery/jquery-3.3.1.js"></script>
