--- a/vista/html/registro.html
+++ b/vista/html/registro.html
@@ -3,44 +3,57 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Registrarse</title>
 </head>
 
 <body>
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>MiniMarket.com</h1>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-11">
+                <div class="bannerNav">
+                  <h1>MiniMarket.com</h1>
+                  <img src="/vista/imagenes/shopping-cart.png" alt="icono de compra">
+                </div>
+                <div class="inicioSesion">
+                  <img src="/vista/imagenes/account.png" alt="perfil">
+                  <a href="/vista/html/iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+                </div>
+              </div>
             </div>
-            <div class="col-md-4">
-                <br><br>
-                <center><a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a></center>
-            </div>
-        </div>
 
         <!--Barra-->
 
         <div class="row">
             <div class="col-md-12">
-                <div id="barra">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <center><a href="../../index.html" id="vistas">Inicio</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="ropa.html" id="vistas">Ropa</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center> <a href="accesorios.html" id="vistas">Accesorios</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="carrito.html" id="vistas">Carrito de Compras</a></center>
-                        </div>
-                    </div>
-                </div>
+              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">MiniMarket</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </button>
+    
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../../index.html">Inicio <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="ropa.html">Ropa</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="accesorios.html">Accesorios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="carrito.html">Carrito de compras</a>
+                  </li>
+                </ul>
+              </div>
+              </nav>
             </div>
-        </div><br><br><br>
+          </div>
 
         <!--Registro-->
 
@@ -53,13 +66,13 @@
                     <input type="text" id="nombre" maxlength="15"><br><br>
                     <label for="Apellido" class="texto">Apellido</label>
                     <input type="text" id="apellido" maxlength="20"><br><br>
-                    <label for="Nacimiento" class="texto">Año de nacimiento</label>
-                    <input type="text" id="nacimiento" maxlength="4"><br><br>
+                    <label for="documento" class="texto">Documento</label>
+                    <input type="text" id="documento" maxlength="4"><br><br>
                     <label for="Correo" class="texto">Correo</label>
                     <input type="text" id="correo" maxlength="30"><br><br>
-                    <label for="Contrasena" class="texto">Nueva Contraseña</label>
+                    <label for="Contrasena" class="texto">Contraseña</label>
                     <input type="password" id="contrasena" maxlength="15"><br><br>
-               <input type="button" id="registro" onclick="registro()" value="Enviar" class="btn btn-primary">
+               <input type="button" id="registro" onclick="conectar()" value="Enviar" class="btn btn-primary">
                 </center>
             </div>
 
