--- a/vista/html/ropa.html
+++ b/vista/html/ropa.html
@@ -87,13 +87,49 @@
             />
             <div class="card-body">
               <h5 class="card-title">Blusa</h5>
-              <p class="card-text">
-                -Blusa negra talla unica. -Original nike. -$ 150000.
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Blusa negra talla unica.</li>
+                <li>Original nike.</li>
+                <li>$ 150000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
+   
+        <!--Modal-->
+<div class="row">
+  <div class="col-md-12">
+<!-- Modal -->
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Información del producto</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Adipisci cupiditate temporibus est, corrupti laboriosam illo,
+          nesciunt amet ab in quidem qui. Dolorem totam, accusantium excepturi 
+          eveniet magnam architecto. Rem, quis.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Comprar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  </div>
+</div>
+        <!---->
 
         <div class="col-md-4">
           <div class="card">
@@ -104,13 +140,17 @@
             />
             <div class="card-body">
               <h5 class="card-title">Conjunto</h5>
-              <p class="card-text">
-                -Chaqueta y pantalon. -Impermeable. -$ 80000
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Chaqueta y pantalon.</li>
+                <li>Impermeable.</li>
+                <li>$ 80000</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
+
+
 
         <div class="col-md-4">
           <div class="card">
@@ -121,10 +161,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Top y leguis</h5>
-              <p class="card-text">
-                -Diferentes tallas. -En tres colores. -$ 50000
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Diferentes tallas.</li>
+                <li>En tres colores.</li>
+                <li>$ 50000</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -148,8 +190,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Sudadera</h5>
-              <p class="card-text">-Talla unica -Negra y gris. -$ 45000.</p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Talla unica</li>
+                <li>Negra y gris.</li>
+                <li>$ 45000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -163,8 +209,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Buso</h5>
-              <p class="card-text">-Original de nike. -Unico color. -$50000.</p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Original de nike.</li>
+                <li>Unico color.</li>
+                <li>$50000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -178,10 +228,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Conjunto</h5>
-              <p class="card-text">
-                -Camisa y pantalon. -Colección limitada. -$ 80000.
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Camisa y pantalon.</li>
+                <li>Colección limitada.</li>
+                <li>$ 80000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -205,10 +257,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Conjunto Bascket</h5>
-              <p class="card-text">
-                -Conjunto para niño y niña. -Especial para bascket. -$ 40000.
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Conjunto para niño y niña.</li>
+                <li>Especial para bascket.</li>
+                <li>$ 40000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -222,10 +276,12 @@
             />
             <div class="card-body">
               <h5 class="card-title">Conjunto football</h5>
-              <p class="card-text">
-                -Conjunto para niños. -Especial para football. -$ 40000.
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Conjunto para niños.</li>
+                <li>Especial para football.</li>
+                <li>$ 40000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
@@ -239,29 +295,31 @@
             />
             <div class="card-body">
               <h5 class="card-title">Conjunto shick</h5>
-              <p class="card-text">
-                -Para niño y niña. -Unicos colores. -$ 60000.
-              </p>
-              <button type="submit">Comprar</button>
+              <ul class="card-text">
+                <li>Para niño y niña.</li>
+                <li>Unicos colores.</li>
+                <li>$ 60000.</li>
+              </ul>
+              <button type="submit" class="btn btn-outline-dark"  data-toggle="modal" data-target="#exampleModal">Más info</button>
             </div>
           </div>
         </div>
       </div>
 
       <!--banner-->
-      <center>
-        <div id="banner">
-          <div class="row">
-            <div class="col-md-12">
-              <p>Contactos: 3150008935-2334443</p>
-              <p>linea nacional: 01800032323134</p>
-              <p>Quejas y reclamos: minimarket.comercioweb@gmail.com</p>
-              <p>Dererchos de autor Reservados</p>
-              <p>MiniMarket web</p>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="footer">
+            <ul>
+              <li>Contactos: 3150008935-2334443</li>
+              <li>Quejas y reclamos: minimarket.comercioweb@gmail.com</li>
+              <li>Dererchos de autor Reservados</li>
+              <li>linea nacional: 01800032323134</li>
+              <li>MiniMarket web</li>
+            </ul>
           </div>
         </div>
-      </center>
+      </div>
     </div>
   </body>
   <script type="text/javascript" src="../../includes/jquery/jquery-3.3.1.js"></script>
@@ -270,6 +328,7 @@
     type="text/css"
     href="../../includes/bootsrap 4/css/bootstrap.min.css"
   />
+ <script type="text/javascript" src="../../includes/bootsrap 4/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="../js/general.js"></script>
   <link rel="stylesheet" href="../js/general.js" />
   <link rel="stylesheet" href="../css/ropa.css" />
