Vista registro responsive

--- a/vista/html/iniciarSesion.html
+++ b/vista/html/iniciarSesion.html
@@ -85,7 +85,7 @@
             <li>Utiliza tu correo para el registro en nuestro portal.</li>
           </ul>
           <a href="registro.html"> <button id="registrar">Registrarme</button></a>
-          <a href="../html/productos.html">Admin</a>
+          <!-- <a href="../html/productos.html">Admin</a> -->
         </div>
     </div>
 
